--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     testImplementation "org.amshove.kluent:kluent:${kluentVersion}"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+
+    compile group: 'org.apache.commons', name: 'commons-text', version: '1.8'
 }
 
 compileKotlin {
