--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 
     compile group: 'org.apache.commons', name: 'commons-text', version: '1.8'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
 }
 
 compileKotlin {
