--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1.3.0
+        with:
+        - java-version: '9.0.4'
       - run: gradlew clean test
       - run: gradlew clean build
 
