--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1.3.0
         with:
-        - java-version: '9.0.4'
+          java-version: '9.0.4'
       - run: gradlew clean test
       - run: gradlew clean build
 
