--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
       - uses: actions/setup-java@v1.3.0
         with:
           java-version: '9.0.4'
-      - run: gradlew clean test
-      - run: gradlew clean build
+      - run: ./gradlew clean test
+      - run: ./gradlew clean build
 
